--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <!-- Logo -->
      <link rel="shortcut icon" href="./multimedia/icono.png" type="image/x-icon">
 
+    <!-- Enlace a la hoja de estilos de Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
 
     <title>Florencia Pavon</title>
 </head>
@@ -25,28 +28,30 @@
     <div class="grid-container">
 
         <header class="grid-item header">
-            <nav class="menu">
-                <ul>
-                    <li><a href="./pages/proyecto.html">Proyectos</a></li>
-                    <li><a href="./pages/experiencia.html">Experiencia</a></li>
-                    <li><a href="./pages/conocimiento.html">Conocimientos</a></li>
-                    <li><a href="./pages/estudio.html">Estudios</a></li>
-                    <li><a href="./pages/contacto.html">Contacto</a></li>
-                </ul>
+            <nav class="navbar-nav menu">
+                    <ul>
+                        <li class="nav-item"><a class="nav-link" href="./pages/proyecto.html">Proyectos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./pages/experiencia.html">Experiencia</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./pages/conocimiento.html">Conocimientos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./pages/estudio.html">Estudios</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./pages/contacto.html">Contacto</a></li>
+                    </ul>
             </nav>
             <h1 class="titulo-principal">Florencia Pavon</h1>
         </header>
 
         <main class="grid-item main-principal">
-            <aside>
-                <img id="foto-perfil" src="./multimedia/perfil.jpg" alt="">
-            </aside>
-            <!-- div.grid-container>div*6.grid-item -->
-            <div class="content-box">
-                <div class="flex-content">Hola, tengo 22 años!</div>
-                <div class="flex-content">Toco la guitarra</div>
-                <div class="flex-content">Me gusta hacer actividad fisica</div>
-            </div>  
+            <div class="container">
+                <aside>
+                    <img id="foto-perfil" src="./multimedia/perfil.jpg" alt="">
+                </aside>
+                <!-- div.grid-container>div*6.grid-item -->
+                <div class="content-box">
+                    <div class="flex-content">Hola, tengo 22 años!</div>
+                    <div class="flex-content">Toco la guitarra</div>
+                    <div class="flex-content">Me gusta hacer actividad fisica</div>
+                </div>
+            </div>   
         </main>
 
         <footer class="grid-item footer">
@@ -61,7 +66,12 @@
             </div>        
         </footer>
 
-    </div>    
+    </div>  
+    <!-- Enlace a los scripts de Bootstrap -->
+    <script src="<https://code.jquery.com/jquery-3.5.1.slim.min.js>"></script>
+    <script src="<https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js>"></script>
+    <script src="<https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js>"></script>
+</body>  
 </body>
 
 </html>
