--- a/pages/conocimiento.html
+++ b/pages/conocimiento.html
@@ -15,6 +15,9 @@
     <!-- Fuente de Iconos -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
+    <!-- Enlace a la hoja de estilos de Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
     <title>Conocimientos</title>
 </head>
 <body>
@@ -23,27 +26,28 @@
         <header class="grid-item header">
             <nav class="menu">
                 <ul>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="proyecto.html">Proyectos</a></li>
-                    <li><a href="experiencia.html">Experiencia</a></li>
-                    <li><a href="estudio.html">Estudios</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./proyecto.html">Proyectos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./experiencia.html">Experiencia</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./estudio.html">Estudios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
                 </ul>
             </nav>
-            <h1 class="titulos">Conocimientos</h1>
+            <h1 class="titulos m-3">Conocimientos</h1>
         </header>
 
         <main class="grid-item main">
-            <div class="information-container">
-                <section>
-                    <h3 class="titulos">BACKEND</h3>
-                    <ul>
-                        <li>Node Js</li>
-                        <li>SpringBoot</li>
-                        <li>Python</li>
-                    </ul>
-                </section>
-                <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg">
+                        <h3 class="titulos">BACKEND</h3>
+                        <ul>
+                            <li>Node Js</li>
+                            <li>SpringBoot</li>
+                            <li>Python</li>
+                        </ul>
+                </div>
+                <div class="col-12 col-lg">
                     <h3 class="titulos">FRONTEND</h3>
                     <ul>
                         <li>Html</li>
@@ -51,15 +55,16 @@
                         <li>JavaScript</li>
                         <li>Tkinter</li>
                     </ul>
-                </section>
-                <section>
+                </div>
+                <div class="col-12 col-lg">
                     <h3 class="titulos">BASE DE DATOS</h3>
                     <ul>
                         <li>Sqlite</li>
                         <li>MySql</li>
                         <li>MongoDB</li>
                     </ul>
-                </section>
+                </div>
+                </div>
             </div>
         </main>
 
@@ -76,5 +81,9 @@
         </footer>
 
     </div>
+    <!-- Enlace a los scripts de Bootstrap -->
+    <script src="<https://code.jquery.com/jquery-3.5.1.slim.min.js>"></script>
+    <script src="<https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js>"></script>
+    <script src="<https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js>"></script>
 </body>
 </html>
