--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,6 +15,10 @@
     <!-- Fuente de Iconos -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
+    <!-- Enlace a la hoja de estilos de Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+
     <title>Contacto</title>
 </head>
 <body>
@@ -22,26 +26,26 @@
         <header class="grid-item header">
             <nav class="menu">
                 <ul>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="proyecto.html">Proyectos</a></li>
-                    <li><a href="experiencia.html">Experiencia</a></li>
-                    <li><a href="conocimiento.html">Conocimientos</a></li>
-                    <li><a href="estudio.html">Estudios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./proyecto.html">Proyectos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./experiencia.html">Experiencia</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./conocimiento.html">Conocimientos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./estudio.html">Estudios</a></li>
                 </ul>
             </nav>
-            <h1 class="titulos">Contacto</h1>
+            <h1 class="titulos m-3">Contacto</h1>
         </header>
 
         <main class="grid-item main">
             <p>Deja tu mensaje</p>
-            <div class="information-container">
+            <div class="container">
                 <form action="/submit" method="post">
                     <label for="nombre">Nombre</label>
-                    <input type="text" name="nombre" id="nombre">
-                    <label for="mail">Mail</label>
-                    <input type="email" name="mail" id="mail"><br><br>
+                    <input class="m-2" type="text" name="nombre" id="nombre">
+                    <label class="ml-2" for="mail">Mail</label>
+                    <input class="m-2" type="email" name="mail" id="mail"><br><br>
                     <label for="mensaje">Mensaje</label><br>
-                    <textarea name="mensaje" id="mensaje"></textarea><br>
+                    <textarea class="form-control" name="mensaje" id="mensaje"></textarea><br>
                     <input type="submit" value="Enviar">
                 </form>
             </div>
@@ -60,8 +64,10 @@
         </footer>
 
     </div>
-
-    
-    
+    <!-- Enlace a los scripts de Bootstrap -->
+    <script src="<https://code.jquery.com/jquery-3.5.1.slim.min.js>"></script>
+    <script src="<https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js>"></script>
+    <script src="<https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js>"></script>
+  
 </body>
 </html>
