--- a/pages/estudio.html
+++ b/pages/estudio.html
@@ -15,6 +15,9 @@
     <!-- Fuente de Iconos -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
+    <!-- Enlace a la hoja de estilos de Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
     <title>Estudios</title>
 </head>
 <body>
@@ -23,41 +26,42 @@
         <header class="grid-item header">
             <nav class="menu">
                 <ul>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="proyecto.html">Proyectos</a></li>
-                    <li><a href="experiencia.html">Experiencia</a></li>
-                    <li><a href="conocimiento.html">Conocimientos</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./proyecto.html">Proyectos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./experiencia.html">Experiencia</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./conocimiento.html">Conocimientos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
                 </ul>
             </nav>
-            <h1 class="titulos">Estudios</h1>
+            <h1 class="titulos m-3">Estudios</h1>
         </header>
 
         <main class="grid-item main">
-            <div class="information-container">
-                <section>
-                    <h3 class="titulos">UNIVERSITARIOS</h3>
-                    <ul>
-                        <li>Universidad Tecnológica Nacional FRC</li>
-                    <p>03/2021 - En curso</p>
-                    <p>Ingeniería en Sistemas de Información - 5º año</p>
-                    </ul>
-                </section>
-                <section>
-                    <h3 class="titulos">CURSOS</h3>
-                    <ul>
-                        <li>Coderhouse</li>
-                        <p>11/2024 - 11/2025</p>
-                        <p>Carrera de Desarrollo Full Stack</p><br>
-                        <li>Bots</li>
-                        <p>05/2022 - 10/2022</p>
-                        <p>Curso de electrónica y programación con Arduino</p><br>
-                        <li>Skills English Institute</li>
-                        <p>03/2017 - 12/2022</p>
-                        <p>Inglés</p>
-                    </ul>
-                </section>
-
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg">
+                        <h3 class="titulos my-3">UNIVERSITARIOS</h3>
+                        <ul>
+                            <li>Universidad Tecnológica Nacional FRC</li>
+                        <p>03/2021 - En curso</p>
+                        <p>Ingeniería en Sistemas de Información - 5º año</p>
+                        </ul>
+                    </div>
+                    <div class="col-12 col-lg">
+                        <h3 class="titulos my-3">CURSOS</h3>
+                        <ul>
+                            <li>Coderhouse</li>
+                            <p>11/2024 - 11/2025</p>
+                            <p>Carrera de Desarrollo Full Stack</p>
+                            <li>Bots</li>
+                            <p>05/2022 - 10/2022</p>
+                            <p>Curso de electrónica y programación con Arduino</p>
+                            <li>Skills English Institute</li>
+                            <p>03/2017 - 12/2022</p>
+                            <p>Inglés</p>
+                        </ul>
+                    </div>
+                </div>
             </div>
     
         </main>
@@ -75,5 +79,9 @@
         </footer>
 
     </div>
+    <!-- Enlace a los scripts de Bootstrap -->
+    <script src="<https://code.jquery.com/jquery-3.5.1.slim.min.js>"></script>
+    <script src="<https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js>"></script>
+    <script src="<https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js>"></script>
 </body>
 </html>
