--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -15,6 +15,9 @@
     <!-- Fuente de Iconos -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
+    <!-- Enlace a la hoja de estilos de Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
     <title>Experiencia</title>
 </head>
 <body>
@@ -23,38 +26,40 @@
         <header class="grid-item header">
             <nav class="menu">
                 <ul>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="proyecto.html">Proyectos</a></li>
-                    <li><a href="conocimiento.html">Conocimientos</a></li>
-                    <li><a href="estudio.html">Estudios</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./proyecto.html">Proyectos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./conocimiento.html">Conocimientos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./estudio.html">Estudios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
                 </ul>
             </nav>
-            <h1 class="titulos">Experiencia</h1>
+            <h1 class="titulos m-3">Experiencia</h1>
         </header>
 
         <main class="grid-item main">
             <img src="../multimedia/logo-proyectos-termo.png" alt="">
             <p><a href="https://proyectostermo.com.ar" target="_blank">Visitar Sitio</a></p>
-            <div class="information-container">
-                <section>
-                    <h2 class="titulos">Asistente de mantenimiento</h2>
-                    <h3 class="titulos">01/2022 - 12/2022</h3>
-                    <ul>
-                        <li>Instalación y actualización de programas</li>
-                        <li>Conexión y configuración de equipos de trabajo</li>
-                        <li>Mantenimiento de equipos de hardware</li>
-                    </ul>
-                </section>
-                <section>
-                    <h2 class="titulos">Administrativo</h2>
-                    <h3 class="titulos">01/2021 - 12/2021</h3>
-                    <ul>
-                        <li>Tareas administrativas corrientes y realización de labores de contabilidad mediante el uso de Excel</li>
-                        <li>Gestion y organización de archivos y documentos administrativos</li>
-                    </ul>
-                </section>
 
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg">
+                        <h2 class="titulos mt-5 mb-3">Asistente de mantenimiento</h2>
+                        <h3 class="titulos">01/2022 - 12/2022</h3>
+                        <ul>
+                            <li>Instalación y actualización de programas</li>
+                            <li>Conexión y configuración de equipos de trabajo</li>
+                            <li>Mantenimiento de equipos de hardware</li>
+                        </ul>
+                    </div>
+                    <div class="col-12 col-lg">
+                        <h2 class="titulos mt-5 mb-3">Administrativo</h2>
+                        <h3 class="titulos">01/2021 - 12/2021</h3>
+                        <ul>
+                            <li>Tareas administrativas corrientes y realización de labores de contabilidad mediante el uso de Excel</li>
+                            <li>Gestion y organización de archivos y documentos administrativos</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
             
         </main>
@@ -71,6 +76,10 @@
             </div>        
         </footer>
 
-    </div>   
+    </div>  
+    <!-- Enlace a los scripts de Bootstrap -->
+    <script src="<https://code.jquery.com/jquery-3.5.1.slim.min.js>"></script>
+    <script src="<https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js>"></script>
+    <script src="<https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js>"></script> 
 </body>
 </html>
