--- a/pages/proyecto.html
+++ b/pages/proyecto.html
@@ -15,6 +15,9 @@
     <!-- Fuente de Iconos -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
+    <!-- Enlace a la hoja de estilos de Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
     <title>Proyectos</title>
 </head>
 
@@ -22,31 +25,32 @@
     <div class="grid-container">
 
         <header class="grid-item header">
-            <nav class="menu">
+            <nav class="navbar-nav menu">
                 <ul>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="experiencia.html">Experiencia</a></li>
-                    <li><a href="conocimiento.html">Conocimientos</a></li>
-                    <li><a href="estudio.html">Estudios</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./experiencia.html">Experiencia</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./conocimiento.html">Conocimientos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./estudio.html">Estudios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
                 </ul>
             </nav>
-            <h1 class="titulos">Proyectos</h1>
+            <h1 class="titulos m-3">Proyectos</h1>
         </header>
 
         <main class="grid-item main">
             <p><i class="bi bi-github"></i>  <a href="https://github.com/florencia-pavon" target="_blank">Florencia-Pavon</a></p>
-            <div class="information-container">
-                <section>
-                    <h2 class="titulos">CheViajemos</h2>
-                    <p><a href="https://github.com/ReynaTeodoro/cheviajemos" target="_blank">Código del proyecto</a></p>
-                    <img src="../multimedia/Inicio CheViajemos.png" alt="" width="200">
-                </section>
-                <section>
-                    <h2 class="titulos">Robótica</h2>
-                    <iframe height="190px" src="https://www.youtube.com/embed/g_acDTml69o?si=sZLq1Q4K2c_JrgsJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                </section> 
-
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg">
+                        <h2 class="titulos">CheViajemos</h2>
+                        <p><a href="https://github.com/ReynaTeodoro/cheviajemos" target="_blank">Código del proyecto</a></p>
+                        <img class="img-fluid" src="../multimedia/Inicio CheViajemos.png" alt="">
+                    </div>
+                    <div class="col-12 col-lg">
+                        <h2 class="titulos">Robótica</h2>
+                        <iframe src="https://www.youtube.com/embed/g_acDTml69o?si=sZLq1Q4K2c_JrgsJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                </div>
             </div>  
         </main>
 
@@ -63,5 +67,9 @@
         </footer>
 
     </div>
+    <!-- Enlace a los scripts de Bootstrap -->
+    <script src="<https://code.jquery.com/jquery-3.5.1.slim.min.js>"></script>
+    <script src="<https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js>"></script>
+    <script src="<https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js>"></script>
 </body>
 </html>
