--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
     
@@ -28,13 +29,13 @@
     <div class="grid-container">
 
         <header class="grid-item header">
-            <nav class="navbar-nav menu">
+            <nav class="navbar-nav">
                     <ul>
-                        <li class="nav-item"><a class="nav-link" href="./pages/proyecto.html">Proyectos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./pages/experiencia.html">Experiencia</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./pages/conocimiento.html">Conocimientos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./pages/estudio.html">Estudios</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./pages/contacto.html">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link p-1" href="./pages/proyecto.html">Proyectos</a></li>
+                        <li class="nav-item"><a class="nav-link p-1" href="./pages/experiencia.html">Experiencia</a></li>
+                        <li class="nav-item"><a class="nav-link p-1" href="./pages/conocimiento.html">Conocimientos</a></li>
+                        <li class="nav-item"><a class="nav-link p-1" href="./pages/estudio.html">Estudios</a></li>
+                        <li class="nav-item"><a class="nav-link p-1" href="./pages/contacto.html">Contacto</a></li>
                     </ul>
             </nav>
             <h1 class="titulo-principal">Florencia Pavon</h1>
