--- a/pages/conocimiento.html
+++ b/pages/conocimiento.html
@@ -24,23 +24,23 @@
 
     <div class="grid-container">
         <header class="grid-item header">
-            <nav class="menu">
+            <nav class="navbar-nav">
                 <ul>
-                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./proyecto.html">Proyectos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./experiencia.html">Experiencia</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./estudio.html">Estudios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
+                    <li class="nav-item"><a class="nav-link p-1" href="../index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link p-1" href="./proyecto.html">Proyectos</a></li>
+                    <li class="nav-item"><a class="nav-link p-1" href="./experiencia.html">Experiencia</a></li>
+                    <li class="nav-item"><a class="nav-link p-1" href="./estudio.html">Estudios</a></li>
+                    <li class="nav-item"><a class="nav-link p-1" href="./contacto.html">Contacto</a></li>
                 </ul>
             </nav>
-            <h1 class="titulos m-3">Conocimientos</h1>
+            <h1 class="titulo m-3">Conocimientos</h1>
         </header>
 
         <main class="grid-item main">
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-lg">
-                        <h3 class="titulos">BACKEND</h3>
+                        <h2 class="subtitulo my-3">BACKEND</h2>
                         <ul>
                             <li>Node Js</li>
                             <li>SpringBoot</li>
@@ -48,7 +48,7 @@
                         </ul>
                 </div>
                 <div class="col-12 col-lg">
-                    <h3 class="titulos">FRONTEND</h3>
+                    <h2 class="subtitulo my-3">FRONTEND</h2>
                     <ul>
                         <li>Html</li>
                         <li>CSS</li>
@@ -57,7 +57,7 @@
                     </ul>
                 </div>
                 <div class="col-12 col-lg">
-                    <h3 class="titulos">BASE DE DATOS</h3>
+                    <h2 class="subtitulo my-3">BASE DE DATOS</h2>
                     <ul>
                         <li>Sqlite</li>
                         <li>MySql</li>
