--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -24,16 +24,16 @@
 <body>
     <div class="grid-container">
         <header class="grid-item header">
-            <nav class="menu">
+            <nav class="navbar-nav">
                 <ul>
-                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./proyecto.html">Proyectos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./experiencia.html">Experiencia</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./conocimiento.html">Conocimientos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./estudio.html">Estudios</a></li>
+                    <li class="nav-item"><a class="nav-link p-1" href="../index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link p-1" href="./proyecto.html">Proyectos</a></li>
+                    <li class="nav-item"><a class="nav-link p-1" href="./experiencia.html">Experiencia</a></li>
+                    <li class="nav-item"><a class="nav-link p-1" href="./conocimiento.html">Conocimientos</a></li>
+                    <li class="nav-item"><a class="nav-link p-1" href="./estudio.html">Estudios</a></li>
                 </ul>
             </nav>
-            <h1 class="titulos m-3">Contacto</h1>
+            <h1 class="titulo m-3">Contacto</h1>
         </header>
 
         <main class="grid-item main">
@@ -45,8 +45,8 @@
                     <label class="ml-2" for="mail">Mail</label>
                     <input class="m-2" type="email" name="mail" id="mail"><br><br>
                     <label for="mensaje">Mensaje</label><br>
-                    <textarea class="form-control" name="mensaje" id="mensaje"></textarea><br>
-                    <input type="submit" value="Enviar">
+                    <textarea class="form-control mensaje" name="mensaje" id="mensaje"></textarea><br>
+                    <input class="button" type="submit" value="Enviar">
                 </form>
             </div>
         </main>
