--- a/pages/estudio.html
+++ b/pages/estudio.html
@@ -24,23 +24,23 @@
     <div class="grid-container">
 
         <header class="grid-item header">
-            <nav class="menu">
+            <nav class="navbar-nav">
                 <ul>
-                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./proyecto.html">Proyectos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./experiencia.html">Experiencia</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./conocimiento.html">Conocimientos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
+                    <li class="nav-item"><a class="nav-link p-1" href="../index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link p-1" href="./proyecto.html">Proyectos</a></li>
+                    <li class="nav-item"><a class="nav-link p-1" href="./experiencia.html">Experiencia</a></li>
+                    <li class="nav-item"><a class="nav-link p-1" href="./conocimiento.html">Conocimientos</a></li>
+                    <li class="nav-item"><a class="nav-link p-1" href="./contacto.html">Contacto</a></li>
                 </ul>
             </nav>
-            <h1 class="titulos m-3">Estudios</h1>
+            <h1 class="titulo m-3">Estudios</h1>
         </header>
 
         <main class="grid-item main">
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-lg">
-                        <h3 class="titulos my-3">UNIVERSITARIOS</h3>
+                        <h2 class="subtitulo my-3">UNIVERSITARIOS</h2>
                         <ul>
                             <li>Universidad Tecnológica Nacional FRC</li>
                         <p>03/2021 - En curso</p>
@@ -48,7 +48,7 @@
                         </ul>
                     </div>
                     <div class="col-12 col-lg">
-                        <h3 class="titulos my-3">CURSOS</h3>
+                        <h2 class="subtitulo my-3">CURSOS</h2>
                         <ul>
                             <li>Coderhouse</li>
                             <p>11/2024 - 11/2025</p>
