--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -24,39 +24,42 @@
     <div class="grid-container">
 
         <header class="grid-item header">
-            <nav class="menu">
+            <nav class="navbar-nav">
                 <ul>
-                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./proyecto.html">Proyectos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./conocimiento.html">Conocimientos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./estudio.html">Estudios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
+                    <li class="nav-item"><a class="nav-link p-1" href="../index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link p-1" href="./proyecto.html">Proyectos</a></li>
+                    <li class="nav-item"><a class="nav-link p-1" href="./conocimiento.html">Conocimientos</a></li>
+                    <li class="nav-item"><a class="nav-link p-1" href="./estudio.html">Estudios</a></li>
+                    <li class="nav-item"><a class="nav-link p-1" href="./contacto.html">Contacto</a></li>
                 </ul>
             </nav>
-            <h1 class="titulos m-3">Experiencia</h1>
+            <h1 class="titulo m-3">Experiencia</h1>
         </header>
 
         <main class="grid-item main">
-            <img src="../multimedia/logo-proyectos-termo.png" alt="">
-            <p><a href="https://proyectostermo.com.ar" target="_blank">Visitar Sitio</a></p>
-
+            <div>
+                <a href="https://proyectostermo.com.ar" target="_blank">
+                    <img src="../multimedia/logo-proyectos-termo.png" alt="">
+                </a>
+            </div>
+                
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-lg">
-                        <h2 class="titulos mt-5 mb-3">Asistente de mantenimiento</h2>
-                        <h3 class="titulos">01/2022 - 12/2022</h3>
+                        <h2 class="subtitulo my-3">Administrativo</h2>
+                        <h3 class="subtitulo-h3">01/2021 - 01/2022</h3>
                         <ul>
-                            <li>Instalación y actualización de programas</li>
-                            <li>Conexión y configuración de equipos de trabajo</li>
-                            <li>Mantenimiento de equipos de hardware</li>
+                            <li>Tareas administrativas corrientes y realización de labores de contabilidad mediante el uso de Excel.</li>
+                            <li>Gestion y organización de archivos y documentos administrativos.</li>
                         </ul>
                     </div>
                     <div class="col-12 col-lg">
-                        <h2 class="titulos mt-5 mb-3">Administrativo</h2>
-                        <h3 class="titulos">01/2021 - 12/2021</h3>
+                        <h2 class="subtitulo my-3">Asistente de mantenimiento</h2>
+                        <h3 class="subtitulo-h3">01/2022 - 01/2023</h3>
                         <ul>
-                            <li>Tareas administrativas corrientes y realización de labores de contabilidad mediante el uso de Excel</li>
-                            <li>Gestion y organización de archivos y documentos administrativos</li>
+                            <li>Instalación y actualización de programas.</li>
+                            <li>Conexión y configuración de equipos de trabajo.</li>
+                            <li>Mantenimiento de equipos de hardware.</li>
                         </ul>
                     </div>
                 </div>
