--- a/pages/proyecto.html
+++ b/pages/proyecto.html
@@ -25,30 +25,33 @@
     <div class="grid-container">
 
         <header class="grid-item header">
-            <nav class="navbar-nav menu">
+            <nav class="navbar-nav">
                 <ul>
-                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./experiencia.html">Experiencia</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./conocimiento.html">Conocimientos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./estudio.html">Estudios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
+                    <li class="nav-item"><a class="nav-link p-1" href="../index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link p-1" href="./experiencia.html">Experiencia</a></li>
+                    <li class="nav-item"><a class="nav-link p-1" href="./conocimiento.html">Conocimientos</a></li>
+                    <li class="nav-item"><a class="nav-link p-1" href="./estudio.html">Estudios</a></li>
+                    <li class="nav-item"><a class="nav-link p-1" href="./contacto.html">Contacto</a></li>
                 </ul>
             </nav>
-            <h1 class="titulos m-3">Proyectos</h1>
+            <h1 class="titulo m-3">Proyectos</h1>
         </header>
 
         <main class="grid-item main">
-            <p><i class="bi bi-github"></i>  <a href="https://github.com/florencia-pavon" target="_blank">Florencia-Pavon</a></p>
+            <div class="github">
+                <i class="bi bi-github"></i><a href="https://github.com/florencia-pavon" target="_blank">Mi perfil</a>
+            </div>
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-lg">
-                        <h2 class="titulos">CheViajemos</h2>
-                        <p><a href="https://github.com/ReynaTeodoro/cheviajemos" target="_blank">Código del proyecto</a></p>
-                        <img class="img-fluid" src="../multimedia/Inicio CheViajemos.png" alt="">
+                        <h2 class="subtitulo my-3">CheViajemos</h2>
+                        <a href="https://github.com/ReynaTeodoro/cheviajemos" target="_blank">
+                            <img class="img-fluid" width="200px" src="../multimedia/Inicio CheViajemos.png" alt="">
+                        </a>
                     </div>
                     <div class="col-12 col-lg">
-                        <h2 class="titulos">Robótica</h2>
-                        <iframe src="https://www.youtube.com/embed/g_acDTml69o?si=sZLq1Q4K2c_JrgsJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <h2 class="subtitulo my-3">Robótica</h2>
+                        <iframe width="200px" src="https://www.youtube.com/embed/g_acDTml69o?si=sZLq1Q4K2c_JrgsJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>  
