--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfolio de Florencia Pavon">
+    <meta name="keywords" content="Florencia Pavon, Portfolio, UTN, sistemas">
     
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
@@ -18,8 +20,10 @@
     <!-- Logo -->
      <link rel="shortcut icon" href="./multimedia/icono.png" type="image/x-icon">
 
-    <!-- Enlace a la hoja de estilos de Bootstrap -->
+    <!-- Librerias -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet"/>
 
 
     <title>Florencia Pavon</title>
@@ -38,7 +42,7 @@
                         <li class="nav-item"><a class="nav-link p-1" href="./pages/contacto.html">Contacto</a></li>
                     </ul>
             </nav>
-            <h1 class="titulo-principal">Florencia Pavon</h1>
+            <h1 class="titulo-principal animate__animated animate__bounce">Florencia Pavon</h1>
         </header>
 
         <main class="grid-item main-principal">
@@ -48,9 +52,9 @@
                 </aside>
                 <!-- div.grid-container>div*6.grid-item -->
                 <div class="content-box">
-                    <div class="flex-content">Hola, tengo 22 años!</div>
-                    <div class="flex-content">Toco la guitarra</div>
-                    <div class="flex-content">Me gusta hacer actividad fisica</div>
+                    <div class="flex-content" data-aos="fade-left">Hola, tengo 22 años!</div>
+                    <div class="flex-content" data-aos="fade-down">Toco la guitarra</div>
+                    <div class="flex-content" data-aos="fade-right">Me gusta hacer actividad fisica</div>
                 </div>
             </div>   
         </main>
@@ -72,6 +76,11 @@
     <script src="<https://code.jquery.com/jquery-3.5.1.slim.min.js>"></script>
     <script src="<https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js>"></script>
     <script src="<https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js>"></script>
+    <!-- Enlace a los scripts de AOS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
 </body>  
 </body>
 
