--- a/index.html
+++ b/index.html
@@ -33,14 +33,19 @@
     <div class="grid-container">
 
         <header class="grid-item header">
-            <nav class="navbar-nav">
-                    <ul>
+            <nav class="navbar navbar-expand-sm">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#opciones" >
+                    <span class="navbar-toggler-icon"><i class="bi bi-list"></i></span>
+                </button>
+                <div class="collapse navbar-collapse" id="opciones">
+                    <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link p-1" href="./pages/proyecto.html">Proyectos</a></li>
                         <li class="nav-item"><a class="nav-link p-1" href="./pages/experiencia.html">Experiencia</a></li>
                         <li class="nav-item"><a class="nav-link p-1" href="./pages/conocimiento.html">Conocimientos</a></li>
                         <li class="nav-item"><a class="nav-link p-1" href="./pages/estudio.html">Estudios</a></li>
                         <li class="nav-item"><a class="nav-link p-1" href="./pages/contacto.html">Contacto</a></li>
                     </ul>
+                </div>
             </nav>
             <h1 class="titulo-principal animate__animated animate__bounce">Florencia Pavon</h1>
         </header>
@@ -73,9 +78,9 @@
 
     </div>  
     <!-- Enlace a los scripts de Bootstrap -->
-    <script src="<https://code.jquery.com/jquery-3.5.1.slim.min.js>"></script>
-    <script src="<https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js>"></script>
-    <script src="<https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js>"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js" defer></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" defer></script>
     <!-- Enlace a los scripts de AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
