--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -24,14 +24,19 @@
     <div class="grid-container">
 
         <header class="grid-item header">
-            <nav class="navbar-nav">
-                <ul>
-                    <li class="nav-item"><a class="nav-link p-1" href="../index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link p-1" href="./proyecto.html">Proyectos</a></li>
-                    <li class="nav-item"><a class="nav-link p-1" href="./conocimiento.html">Conocimientos</a></li>
-                    <li class="nav-item"><a class="nav-link p-1" href="./estudio.html">Estudios</a></li>
-                    <li class="nav-item"><a class="nav-link p-1" href="./contacto.html">Contacto</a></li>
-                </ul>
+            <nav class="navbar navbar-expand-sm">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#opciones" >
+                    <span class="navbar-toggler-icon"><i class="bi bi-list"></i></span>
+                </button>
+                <div class="collapse navbar-collapse" id="opciones">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link p-1" href="../index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link p-1" href="./proyecto.html">Proyectos</a></li>
+                        <li class="nav-item"><a class="nav-link p-1" href="./conocimiento.html">Conocimientos</a></li>
+                        <li class="nav-item"><a class="nav-link p-1" href="./estudio.html">Estudios</a></li>
+                        <li class="nav-item"><a class="nav-link p-1" href="./contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
             </nav>
             <h1 class="titulo m-3">Experiencia</h1>
         </header>
@@ -81,8 +86,8 @@
 
     </div>  
     <!-- Enlace a los scripts de Bootstrap -->
-    <script src="<https://code.jquery.com/jquery-3.5.1.slim.min.js>"></script>
-    <script src="<https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js>"></script>
-    <script src="<https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js>"></script> 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js" defer></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" defer></script>
 </body>
 </html>
